excel.node.js
// Generated by PEG.js v0.11.0-master.b7b87ea, https://pegjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message;
  this.expected = expected;
  this.found = found;
  this.location = location;
  this.name = "SyntaxError";

  // istanbul ignore next
  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found, location) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    },

    not: function(expectation) {
      return "not " + describeExpectation(expectation.expected);
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};

  var peg$startRuleFunctions = { EXCEL: peg$parseEXCEL };
  var peg$startRuleFunction = peg$parseEXCEL;

  var peg$c0 = ".";
  var peg$c1 = "&";
  var peg$c2 = "^";
  var peg$c3 = ",";
  var peg$c4 = "/";
  var peg$c5 = "\"";
  var peg$c6 = "=";
  var peg$c7 = ">=";
  var peg$c8 = ">";
  var peg$c9 = "<=";
  var peg$c10 = "(";
  var peg$c11 = "<";
  var peg$c12 = "-";
  var peg$c13 = "*";
  var peg$c14 = "<>";
  var peg$c15 = "%";
  var peg$c16 = "+";
  var peg$c17 = ")";
  var peg$c18 = "'";
  var peg$c19 = "and";
  var peg$c20 = "concat";
  var peg$c21 = "false";
  var peg$c22 = "if";
  var peg$c23 = "includes";
  var peg$c24 = "ln";
  var peg$c25 = "log";
  var peg$c26 = "log10";
  var peg$c27 = "not";
  var peg$c28 = "or";
  var peg$c29 = "power";
  var peg$c30 = "round";
  var peg$c31 = "starts";
  var peg$c32 = "true";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[A-Za-z_$]/;
  var peg$r2 = /^[ \t\n\r]/;

  var peg$e0 = peg$otherExpectation("expression");

  var peg$f0 = function(val) { return val; };
  var peg$f1 = function(val, rest) {
      const ret = rest? val / 100 : val;
      // console.log("EXPR", val, rest, ret);
      return ret;
    };
  var peg$f2 = function(val1, rest) {
      const ret =
          rest && rest[0][0] === ">=" ? val1 >= rest[1]
        : rest && rest[0][0] === ">"  ? val1 >  rest[1]
        : rest && rest[0][0] === "<>" ? val1 != rest[1]
        : rest && rest[0][0] === "<=" ? val1 <= rest[1]
        : rest && rest[0][0] === "<"  ? val1 <  rest[1]
        : rest && rest[0][0] === "="  ? val1 == rest[1]
        : val1;
      // console.log("EXP_C", val1, rest, ret);
      return ret;
    };
  var peg$f3 = function(val1, rest) {
      const ret =
        rest.length === 0
          ? val1
          : rest.reduce(
              (acc, element) =>
                element[0][0] === "+" ? addVal1Val2(acc, element[1])
              : element[0][0] === "-" ? subVal1Val2(acc, element[1])
              : /* element[0][0] === "&" */ String(acc) + String(element[1]),
              val1
            );
      // console.log("EXP_AS", val1, rest, "RET:", ret);
      return ret;
    };
  var peg$f4 = function(val1, rest) {
      const ret =
        rest.length === 0
          ? val1
          : rest.reduce(
              (acc, element) =>
                element[0][0] === "*" ? acc * element[1]
              : /* element[0][0] === "/" */ acc / element[1],
              val1
            );

      // console.log("EXP_PD", val1, ret);
      return ret;
    };
  var peg$f5 = function() { return EXCEL_STYLE; };
  var peg$f6 = function(val1, rest) {
      const ret =
        rest.length === 0
          ? val1
          : rest.reduce((acc, element) => acc ** element[1], val1);

       // console.log("EXP_X", val1, rest, "RET", ret);
      return ret;
    };
  var peg$f7 = function(val) {
      return val;
    };
  var peg$f8 = function(val1, rest) {
      return rest.reduce((acc, element) => acc + String(element[1]), String(val1));
    };
  var peg$f9 = function(val1, val2) {
      return String(val1).startsWith(String(val2));
    };
  var peg$f10 = function(val1, val2) {
      return String(val1).includes(String(val2));
    };
  var peg$f11 = function(val) {
      return -val;
    };
  var peg$f12 = function(base, exp) {
      return Number(base) ** Number(exp);
    };
  var peg$f13 = function(num, prec) {
      const fac=10**Number(prec); return Math.round(Number(num)*fac)/fac;
    };
  var peg$f14 = function(val) {
      return Math.log(Number(val));
    };
  var peg$f15 = function(val) {
      return Math.log10(Number(val));
    };
  var peg$f16 = function(val, base) {
      return Math.log(Number(val)) / Math.log(base);
    };
  var peg$f17 = function(val, tVal, fVal) {
      return val ? tVal : fVal;
    };
  var peg$f18 = function(val1, rest) {
      return rest.reduce((acc, element) => acc || !!element[1], !!val1);
    };
  var peg$f19 = function(val1, rest) {
      return rest.reduce((acc, element) => acc && !!element[1], !!val1);
    };
  var peg$f20 = function(val) {
      return (!val);
    };
  var peg$f21 = function() {
      return false;
    };
  var peg$f22 = function() {
      return true;
    };
  var peg$f23 = function(digits, frac) {
      return frac ?
        Number(digits.join("")+frac.flat().join(""))
      : Number(digits.join(""));
    };
  var peg$f24 = function(char1, chars) {
      const varName = [char1, ...chars].join("");
      return options.values[varName];
    };
  var peg$f25 = function(chars) {
      return chars.map(c => c[1]).join("");
    };

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$expected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return [peg$savedPos, peg$currPos];
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  var peg$VALIDFILENAME = typeof options.filename === "string" && options.filename.length > 0;
  function peg$computeLocation(startPos, endPos) {
    var loc = {};

    if ( peg$VALIDFILENAME ) loc.filename = options.filename;

    var startPosDetails = peg$computePosDetails(startPos);
    loc.start = {
      offset: startPos,
      line: startPosDetails.line,
      column: startPosDetails.column
    };

    var endPosDetails = peg$computePosDetails(endPos);
    loc.end = {
      offset: endPos,
      line: endPosDetails.line,
      column: endPosDetails.column
    };

    return loc;
  }

  function peg$begin() {
    peg$expected.push({ pos: peg$currPos, variants: [] });
  }

  function peg$expect(expected) {
    var top = peg$expected[peg$expected.length - 1];

    if (peg$currPos < top.pos) { return; }

    if (peg$currPos > top.pos) {
      top.pos = peg$currPos;
      top.variants = [];
    }

    top.variants.push(expected);
  }

  function peg$end(invert) {
    var expected = peg$expected.pop();
    var top = peg$expected[peg$expected.length - 1];
    var variants = expected.variants;

    if (top.pos !== expected.pos) { return; }

    if (invert) {
      variants = variants.map(function(e) {
        return e.type === "not" ? e.expected : { type: "not", expected: e };
      });
    }

    Array.prototype.push.apply(top.variants, variants);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found, location),
      expected,
      found,
      location
    );
  }

  function peg$buildError() {
    var expected = peg$expected[0];
    var failPos = expected.pos;

    return peg$buildStructuredError(
      expected.variants,
      failPos < input.length ? input.charAt(failPos) : null,
      failPos < input.length
        ? peg$computeLocation(failPos, failPos + 1)
        : peg$computeLocation(failPos, failPos)
    );
  }

  function peg$parseEXCEL() {
    var s0, s1, s2, s3;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    rule$expects(peg$e0);
    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseEQ_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEXPR();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEOF();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f0(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;

    return s0;
  }

  function peg$parseEXPR() {
    var s0, s1, s2;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parseEXP_C();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsePCT_();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f1(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEXP_C() {
    var s0, s1, s2, s3, s4;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parseEXP_AS();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parseGE_();
      if (s3 === peg$FAILED) {
        s3 = peg$parseGT_();
        if (s3 === peg$FAILED) {
          s3 = peg$parseNE_();
          if (s3 === peg$FAILED) {
            s3 = peg$parseLE_();
            if (s3 === peg$FAILED) {
              s3 = peg$parseLT_();
              if (s3 === peg$FAILED) {
                s3 = peg$parseEQ_();
              }
            }
          }
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseEXP_AS();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEXP_AS() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parseEXP_PD();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parsePLUS_();
      if (s4 === peg$FAILED) {
        s4 = peg$parseMINUS_();
        if (s4 === peg$FAILED) {
          s4 = peg$parseAMPERS_();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseEXP_PD();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parsePLUS_();
        if (s4 === peg$FAILED) {
          s4 = peg$parseMINUS_();
          if (s4 === peg$FAILED) {
            s4 = peg$parseAMPERS_();
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseEXP_PD();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f3(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEXP_PD() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parseEXP_X();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseMULT_();
      if (s4 === peg$FAILED) {
        s4 = peg$parseDIV_();
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseEXP_X();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseMULT_();
        if (s4 === peg$FAILED) {
          s4 = peg$parseDIV_();
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseEXP_X();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f4(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEXP_X() {
    var s0, s1, s2, s3, s4, s5, s6;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    peg$savedPos = peg$currPos;
    s1 = peg$f5();
    if (s1) {
      s1 = undefined;
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseVALUE();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parseCARET_();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseVALUE();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parseCARET_();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseVALUE();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        peg$savedPos = s0;
        s0 = peg$f6(s2, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      peg$savedPos = peg$currPos;
      s1 = peg$f5();
      if (s1) {
        s1 = peg$FAILED;
      } else {
        s1 = undefined;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseVALUE();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseCARET_();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseEXP_X();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseCARET_();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseEXP_X();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          peg$savedPos = s0;
          s0 = peg$f6(s2, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseVALUE() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }
